--- a/BBBWebMVC/Views/Home/About.cshtml
+++ b/BBBWebMVC/Views/Home/About.cshtml
@@ -6,7 +6,7 @@
 
 <div class="inner">
 	<h1>ABOUT</h1>
-	<span class="image main"><img src="images/bbb.png" alt="" /></span>
+	<span class="image main"><img src="/images/bbb.png" alt="" /></span>
 	<p>Our products offer unique and decoritive innovative styles for any occasion!</p>
 	<p></p>
 	<p></p>
