--- a/BBBWebMVC/Views/Home/Index.cshtml
+++ b/BBBWebMVC/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 			<span class="image">
 				<img src="images/t-shirts.jpg" alt="" />
 			</span>
-			<a href="TShirts.html">
+			<a href="/Home/TShirts">
 				<h2>T-Shirts</h2>
 				<div class="content">
 					<p>We are here to present quality T-Shirts!</p>
@@ -22,7 +22,7 @@
 			<span class="image">
 				<img src="images/sweatshirts.png" alt="" />
 			</span>
-			<a href="Sweatshirts.html">
+			<a href="/Home/Sweatshirts">
 				<h2>Sweatshirts</h2>
 				<div class="content">
 					<p>Let our sweatshirts be your swag!</p>
@@ -33,7 +33,7 @@
 			<span class="image">
 				<img src="images/where my coffee at.png" alt="" />
 			</span>
-			<a href="Mugs.html">
+			<a href="/Home/Mugs">
 				<h2>Mugs</h2>
 				<div class="content">
 					<p>Enjoy our state of the art mugs!</p>
@@ -44,7 +44,7 @@
 			<span class="image">
 				<img src="images/shower curtains.png" alt="" />
 			</span>
-			<a href="Shower-Curtains.html">
+			<a href="/Home/ShowerCurtains">
 				<h2>Shower Curtains</h2>
 				<div class="content">
 					<p>Shower with the best designed showercurtians!</p>
@@ -55,7 +55,7 @@
 			<span class="image">
 				<img src="images/bath-mats.png" alt="" />
 			</span>
-			<a href="Bathroom-Mats.html">
+			<a href="/Home/BathroomMats">
 				<h2>Bathroom Mats</h2>
 				<div class="content">
 					<p>Don't step on anything but the best of art in your bathroom!</p>
@@ -66,7 +66,7 @@
 			<span class="image">
 				<img src="images/BBBL.png" alt="" />
 			</span>
-			<a href="Cups.html">
+			<a href="/Home/Cups">
 				<h2>Cups</h2>
 				<div class="content">
 					<p>Drink with style!</p>
@@ -77,7 +77,7 @@
 			<span class="image">
 				<img src="images/Hats.png" alt="" />
 			</span>
-			<a href="Hats.html">
+			<a href="/Home/Hats">
 				<h2>Hats</h2>
 				<div class="content">
 					<p>Where your cap with swag!</p>
@@ -88,7 +88,7 @@
 			<span class="image">
 				<img src="images/blankets.png" alt="" />
 			</span>
-			<a href="Blankets.html">
+			<a href="/Home/Blankets">
 				<h2>Blankets</h2>
 				<div class="content">
 					<p>Cuddle up cozy with some style!</p>
@@ -99,7 +99,7 @@
 			<span class="image">
 				<img src="images/pictures.png" alt="" />
 			</span>
-			<a href="Wall-Pictures.html">
+			<a href="/Home/Wall-Pictures">
 				<h2>Wall Pictures</h2>
 				<div class="content">
 					<p>Put those pictures on your wall!</p>
@@ -110,7 +110,7 @@
 			<span class="image">
 				<img src="images/Area-Rugs.png" alt="" />
 			</span>
-			<a href="Area-Rugs.html">
+			<a href="/Home/AreaRugs">
 				<h2>Area Rugs</h2>
 				<div class="content">
 					<p>Decorate your floors with style!</p>
@@ -121,7 +121,7 @@
 			<span class="image">
 				<img src="images/pet-beds.png" alt="" />
 			</span>
-			<a href="Pet-Beds.html">
+			<a href="/Home/Pet-Beds">
 				<h2>Pet Beds</h2>
 				<div class="content">
 					<p>Make your pets feel like you care!</p>
@@ -132,7 +132,7 @@
 			<span class="image">
 				<img src="images/miscelanious.png" alt="" />
 			</span>
-			<a href="Miscelanious.html">
+			<a href="/Home/Miscelanious">
 				<h2>Miscelanious</h2>
 				<div class="content">
 					<p>Explore beyond!</p>
