--- a/BBBWebMVC/Views/Home/Contacts.cshtml
+++ b/BBBWebMVC/Views/Home/Contacts.cshtml
@@ -5,9 +5,9 @@
 }
 <div id="main">
 	<div class="inner">
-		<h1>Bathroom Mats!</h1>
-		<span class="image main"><img src="/images/bath-mats.png" alt="" /></span>
-		<p>Stepping on style!</p>
+		<h1>Contact</h1>
+		<span class="image main"><img src="/images/cc.png" alt="" /></span>
+		<p>Feel free to leave your info below for any questions or concerns!</p>
 		<p></p>
 		<p></p>
 	</div>
