--- a/BBBWebMVC/Views/Home/Hats.cshtml
+++ b/BBBWebMVC/Views/Home/Hats.cshtml
@@ -5,9 +5,9 @@
 }
 <div id="main">
 	<div class="inner">
-		<h1>Bathroom Mats!</h1>
-		<span class="image main"><img src="/images/bath-mats.png" alt="" /></span>
-		<p>Stepping on style!</p>
+		<h1>Hats!</h1>
+		<span class="image main"><img src="/images/Hats.png" alt="" /></span>
+		<p>So many hats!</p>
 		<p></p>
 		<p></p>
 	</div>
