--- a/BBBWebMVC/Views/Home/History.cshtml
+++ b/BBBWebMVC/Views/Home/History.cshtml
@@ -5,9 +5,9 @@
 }
 <div id="main">
 	<div class="inner">
-		<h1>Bathroom Mats!</h1>
-		<span class="image main"><img src="/images/bath-mats.png" alt="" /></span>
-		<p>Stepping on style!</p>
+		<h1>History!</h1>
+		<span class="image main"><img src="/images/irish breakfast.png" alt="" /></span>
+		<p>Once upon a time in a land far far away...</p>
 		<p></p>
 		<p></p>
 	</div>
