--- a/BBBWebMVC/Views/Home/Index.cshtml
+++ b/BBBWebMVC/Views/Home/Index.cshtml
@@ -99,7 +99,7 @@
 			<span class="image">
 				<img src="images/pictures.png" alt="" />
 			</span>
-			<a href="/Home/Wall-Pictures">
+			<a href="/Home/WallPictures">
 				<h2>Wall Pictures</h2>
 				<div class="content">
 					<p>Put those pictures on your wall!</p>
@@ -121,7 +121,7 @@
 			<span class="image">
 				<img src="images/pet-beds.png" alt="" />
 			</span>
-			<a href="/Home/Pet-Beds">
+			<a href="/Home/PetBeds">
 				<h2>Pet Beds</h2>
 				<div class="content">
 					<p>Make your pets feel like you care!</p>
