--- a/BBBWebMVC/Views/Home/Mugs.cshtml
+++ b/BBBWebMVC/Views/Home/Mugs.cshtml
@@ -5,9 +5,9 @@
 }
 <div id="main">
 	<div class="inner">
-		<h1>Bathroom Mats!</h1>
-		<span class="image main"><img src="/images/bath-mats.png" alt="" /></span>
-		<p>Stepping on style!</p>
+		<h1>Mugs!</h1>
+		<span class="image main"><img src="/images/where my coffee at.png" alt="" /></span>
+		<p>Mugs! Made to cator to your deepest needs!</p>
 		<p></p>
 		<p></p>
 	</div>
