--- a/BBBWebMVC/Views/Shared/_Layout.cshtml
+++ b/BBBWebMVC/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             <div class="inner">
 
                 <!-- Logo -->
-                <a href="index.html" class="logo">
+                <a href="/Home" class="logo">
                     <span class="symbol"><img src="/images/aaa.png" alt="" /></span><span class="title">Bluebearbay</span>
                 </a>
 
@@ -38,12 +38,11 @@
         <nav id="menu">
             <h2>Menu</h2>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="/Home">Home</a></li>
                 <li><a href="/Home/About">About</a></li>
-                <li><a href="History.html">Our History</a></li>
-                <li><a href="/Home/TShirts">TShirts</a></li>
-                <li><a href="Terms of Service.html">Terms of Service</a></li>
-                <li><a href="Contacts.html">Contact</a></li>
+                <li><a href="/Home/History">Our History</a></li>
+                <li><a href="/Home/TermsOfService">Terms of Service</a></li>
+                <li><a href="/Home/Contacts">Contact</a></li>
             </ul>
         </nav>
 
