--- a/BBBWebMVC/Views/Home/Blankets.cshtml
+++ b/BBBWebMVC/Views/Home/Blankets.cshtml
@@ -5,9 +5,9 @@
 }
 <div id="main">
 	<div class="inner">
-		<h1>Bathroom Mats!</h1>
-		<span class="image main"><img src="/images/bath-mats.png" alt="" /></span>
-		<p>Stepping on style!</p>
+		<h1>Blankets</h1>
+		<span class="image main"><img src="/images/blankets.png" alt="" /></span>
+		<p>Stay warm for the winter with pozaz!</p>
 		<p></p>
 		<p></p>
 	</div>
