--- a/BBBWebMVC/Views/Home/TermsOfService.cshtml
+++ b/BBBWebMVC/Views/Home/TermsOfService.cshtml
@@ -5,9 +5,9 @@
 }
 <div id="main">
 	<div class="inner">
-		<h1>Bathroom Mats!</h1>
-		<span class="image main"><img src="/images/bath-mats.png" alt="" /></span>
-		<p>Stepping on style!</p>
+		<h1>Terms of Service!</h1>
+		<span class="image main"><img src="/images/peterman.png" alt="" /></span>
+		<p>Our products are made for you!</p>
 		<p></p>
 		<p></p>
 	</div>
