--- a/BBBWebMVC/Views/Gadgets/Create.cshtml
+++ b/BBBWebMVC/Views/Gadgets/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model BBBWebMVC.Controllers.CreateModel
+@model BBBWebMVC.Views.Gadgets.CreateModel
 
 @{
     ViewData["Title"] = "Create";
