--- a/BBBWebMVC/Views/Home/Index.cshtml
+++ b/BBBWebMVC/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 			<span class="image">
 				<img src="images/t-shirts.jpg" alt="" />
 			</span>
-			<a href="/Home/TShirts">
+			<a href="/Home/Create">
 				<h2>T-Shirts</h2>
 				<div class="content">
 					<p>We are here to present quality T-Shirts!</p>
@@ -193,4 +193,4 @@ iframe.iFrameResizer = function() {
     }
   </style>
   </div>
-  </div>
+  
