--- a/BBBWebMVC/Views/Shared/_Layout.cshtml
+++ b/BBBWebMVC/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
                 <li><a href="/Home/History">Our History</a></li>
                 <li><a href="/Home/TermsOfService">Terms of Service</a></li>
                 <li><a href="/Home/Contacts">Contact</a></li>
+                <li><a href="/Home/Create">Create</a></li>
             </ul>
         </nav>
 
