--- a/BBBWebMVC/Views/Home/Create.cshtml
+++ b/BBBWebMVC/Views/Home/Create.cshtml
@@ -1,10 +1,4 @@
-﻿@page
-@model BBBWebMVC.Views.Gadgets.CreateModel
-
-@{
-    ViewData["Title"] = "Create";
-    Layout = "~/Views/_ViewImports.cshtml";
-}
+﻿@model GadgetModel
 
 <h1>Create</h1>
 
@@ -15,24 +9,24 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="GadgetModel.Name" class="control-label"></label>
-                <input asp-for="GadgetModel.Name" class="form-control" />
-                <span asp-validation-for="GadgetModel.Name" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GadgetModel.Description" class="control-label"></label>
-                <input asp-for="GadgetModel.Description" class="form-control" />
-                <span asp-validation-for="GadgetModel.Description" class="text-danger"></span>
+                <label asp-for="Description" class="control-label"></label>
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GadgetModel.AppearsIn" class="control-label"></label>
-                <input asp-for="GadgetModel.AppearsIn" class="form-control" />
-                <span asp-validation-for="GadgetModel.AppearsIn" class="text-danger"></span>
+                <label asp-for="AppearsIn" class="control-label"></label>
+                <input asp-for="AppearsIn" class="form-control" />
+                <span asp-validation-for="AppearsIn" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GadgetModel.WithThisActor" class="control-label"></label>
-                <input asp-for="GadgetModel.WithThisActor" class="form-control" />
-                <span asp-validation-for="GadgetModel.WithThisActor" class="text-danger"></span>
+                <label asp-for="WithThisActor" class="control-label"></label>
+                <input asp-for="WithThisActor" class="form-control" />
+                <span asp-validation-for="WithThisActor" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -40,13 +34,3 @@
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-page="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
